[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# Update the crate type to "cdylib" for building as a dynamic library.
#crate-type = ["cdylib"]

[lib]
path = "src/lib.rs"    # The source file of the target.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


